HVAC Backup 2/objects/Error_Log__e.object
<CustomObject>
    <description>This platform event is used to log exception logs</description>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Error_Message__c</fullName>
        <label>Custom Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_At__c</fullName>
        <label>Logged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logged_By__c</fullName>
        <label>Logged By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <pluralLabel>Error Logs</pluralLabel>
</CustomObject>